<resources>
    <string name="app_name">KudaGoEvents</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="event">Событие</string>
    <string name="description">Описание</string>
    <string name="price">Цена</string>
    <string name="free">Бесплатно</string>
    <string name="place">Место</string>
    <string name="address">Адрес</string>
</resources>